botones en tailiwind

--- a/prueba-4.html
+++ b/prueba-4.html
@@ -11,8 +11,8 @@
     <h2>Hola Mundo con tailwindcss</h2>
     <h3>Hola Mundo con tailwindcss </h3>
 
-    <button class="bg-red-500 hover:bg-red-200 text-white font-bold py-2 px-4 rounded">mi boton</button>
-    <!--bg-red-500 = boton rojo; hover:bg-red-200 = opacidad; text-white=letra blanco; fond-bold=texto en negrita; py-2 =pading arriba y abajo va tener 2;
+    <button class="bg-red-500  sm:bg-orange-400 lg:bg-blue -500 hover:bg-red-200 text-white font-bold py-2 px-4 rounded">mi boton</button>
+    <!--bg-red-500 = boton rojo; sm:bg-orange-400 = en el tamaño 400 e boton se covierte naranja; hover:bg-red-200 = opacidad; text-white=letra blanco; fond-bold=texto en negrita; py-2 =pading arriba y abajo va tener 2;
     px-4 = el pading de izquierda y derecha va ser 4 ; rounded = esquinas redondeadas-->
 </body>
 </html>
